<resources>

    <string name="app_name">11.Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_binder">BinderActivity</string>
    <string name="stop_binder_service">Stop Binder Service</string>
    <string name="start_binder_service">Start Binder Service</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_normal_service">Start Normal Service</string>
    <string name="start_intent_service">Start Intent Service</string>

</resources>