<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_service" />

    <Button
        android:id="@+id/btnStartBinderService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_binder_service" />

    <Button
        android:id="@+id/btnStopBinderService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_binder_service" />
    
    <Button
        android:id="@+id/btnStartNormalService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_normal_service" />

    <Button
        android:id="@+id/btnStartIntentService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_intent_service" />

</LinearLayout>